fix(ZNTA-2212) + fix alignment of 'Clear selection' button on User Profile + gwt fixes - button links, administration pages + other minor css fixes to frontend

--- a/server/zanata-frontend/src/frontend/app/styles/gwt.less
+++ b/server/zanata-frontend/src/frontend/app/styles/gwt.less
@@ -7,6 +7,9 @@
   h1 {
     height: 1.1em;
   }
+  .h1, h1 {
+    font-weight: 500 !important;
+  }
   .g {
     align-self: center;
     padding-bottom: 1rem;
@@ -56,7 +59,18 @@
   table .projectWideSearchResultsDocumentBody {
     display: table !important;
   }
+  // Bugfix for a container, do not remove
   .GNM0BIKDBN {
     min-width: unset;
+  }
+  // GWT cancel buttons at bottom of pages
+  form .button.button--link {
+    padding: 0.1875em 0.75em
+  }
+  #cacheStatisticsTable {
+    overflow: auto;
+    overflow-x: scroll;
+    width: 48rem;
+    font-size: 0.875rem;
   }
 }
